# Harmonic

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  TODO  autogen.sh  batc.sh  config.h  configure.ac  data.sh  gdp.sh  harmonic.c  harmonic.desktop  harmonic.h  proc.sh
SPECS/: gtk-harmonic-0.1.0.spec
confsupp/: gnome-doc-utils.make
debian/: README  changelog  control  copyright  harmonic.dirs  harmonic.install  postinst  postrm  preinst  prerm  rules
doc/: Harmonic-help.omf.in  Makefile.am  Makefile.in
doc/C/: Harmonic-help.xml
m4/: ChangeLog
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  el.gmo  el.po  fr.gmo  fr.po  gtk-harmonic.pot  it.gmo  it.po  kk.gmo  kk.po  ru.gmo  ru.po  zh_CN.gmo  zh_CN.po
src/: Harmonic  Makefile.am  batc.c  batc.h  data.c  data.h  disp.c  disp.h  display.c  display.h  harmonic.c  harmonic.h  main.c  main.h  open.c  open.h  plotlinear0-1-0.c  plotlinear0-1-0.h  plotpolar0-1-0.c  plotpolar0-1-0.h  proc.c  proc.h  util.c  util.h
src/.deps/: harmonic.Po  plotlinear0-1-0.Po
